--- a/ssr/webpack-ssr/temp.html
+++ b/ssr/webpack-ssr/temp.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>{{title}}</title>
-</head>
-<body>
+  <head>
+    <title>{{ title }}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
+    <meta name="theme-color" content="#f60">
+    <style>
+      #skip a {  position:absolute;  left:-10000px;  top:auto;  width:1px;  height:1px;  overflow:hidden;  }
+      #skip a:focus {  position:static;  width:auto;  height:auto;  }
+    </style>
+  </head>
+  <body>
+  <div id="skip"><a href="#app">skip to content</a></div>
   <!--vue-ssr-outlet-->
-	<script>
-		alert(1122221);
-	</script>
-</body>
+  </body>
 </html>
