add jest and add html-parser

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 
   <div id="app">
     {{ b }}
+    <textarea>
+      111
+    </textarea>
   </div>
 
   <script src="./node_modules/vue/dist/vue.js"></script>
